--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
 	<meta name="author" content="Daan van Monsjou">	
 	<title>Daan van Monsjou - Freelance techjournalist</title>
-	<link href="/stylesheet.css" rel="stylesheet">
+	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Mono&display=swap" rel="stylesheet">
 	<script type="text/javascript" language="JavaScript">
 		function HideContent(d) {
