--- a/index.html
+++ b/index.html
@@ -51,7 +51,8 @@
 		<div id="q1" style="display:none;">Hidden</div>
 			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (alleen zakelijk)</a>
 				<div id="uniquename" style="display:none;">
-					<p><code>+31 (0)6 2604 5919</code><br>(werkt ook voor Signal en WhatsApp)</p>
+					<p><code>+31 (0)6 2604 5919</code><br><br>
+					(werkt ook voor Signal en WhatsApp)</p>
 				</div>
 			</div>
     	  </div>
