--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
-			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (alleen zakelijk)</a>
+			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
 				<div id="uniquename" style="display:none;">
-					<p><code>+31 (0)6 2604 5919</code><br><br>
-					(werkt ook voor Signal en WhatsApp)</p>
+					<p><code>+31 (0)6 2604 5919</code>
 				</div>
 			</div>
     	  </div>
