--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<title>Daan van Monsjou - Freelance techjournalist</title>
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Mono&display=swap" rel="stylesheet">
-	<link rel="icon" href="images/favicon.png">
+	<link rel="icon" href="favicon.png">
 	<script type="text/javascript" language="JavaScript">
 		function HideContent(d) {
 		document.getElementById(d).style.display = "none";
