--- a/contact.html
+++ b/contact.html
@@ -3,6 +3,7 @@
 	<meta charset="UTF-8">
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Mono&display=swap" rel="stylesheet">
+	<link rel="icon" href="images/icon.png">
 	<title>Anoniem contact - Daan van Monsjou</title>
 </head>
 <body>
