--- a/portfolio.html
+++ b/portfolio.html
@@ -5,6 +5,7 @@
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Mono&display=swap" rel="stylesheet">
 	<link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
+	<link rel="icon" href="images/icon.png">
 	<title>Portfolio - Daan van Monsjou</title>
 </head>
 
