--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
-			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
+			<div><a style="font-size: 20px; font-weight: normal;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
 				<div id="uniquename" style="display:none;">
 					<p><code>+31 (0)6 2604 5919</code>
 				</div>
