--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</div>
     	  </div>
 		<br>
-		<p>Wil je gevoelige informatie met me delen of blijf je liever gewoon anoniem? <a href="/contact">Klik dan hier</a>.</p>
+		<p>Wil je gevoelige informatie met me delen of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
 		<br><br>
 		<hr>
 		</p>
