--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,8 @@
 				<p><li><a href="https://tweakers.net/nieuws/161164/bijna-9-op-de-10-geregistreerde-beveiligingscameras-filmen-openbare-weg.html" target = "_blank">Nieuws: Bijna 9 op de 10 geregistreerde beveiligingscamera's filmen openbare weg</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/160062/hacker-publiceert-2tb-aan-data-van-cayman-national-bank.html" target = "_blank">Nieuws: Hacker publiceert 2TB aan data van Cayman National Bank</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/159934/crytek-maakt-benchmark-met-realtime-raytracing-beschikbaar-voor-alle-gebruikers.html" target = "_blank">Nieuws: Crytek maakt benchmark met realtime raytracing beschikbaar voor alle gebruikers</a></li></p>
-
+				<p><li><a href="https://tweakers.net/geek/157896/half-life-2-personages-kunnen-na-vijf-jaar-eindelijk-weer-met-hun-ogen-knipperen.html" target = "_blank">.geek: Half-Life 2-personages kunnen na vijf jaar eindelijk weer met hun ogen knipperen</a></li></p>
+				<p><li><a href="https://tweakers.net/geek/158492/forumgebruikers-kraken-oude-wachtwoorden-van-unix-grondleggers.html" target = "_blank">.geek: Forumgebruikers kraken oude wachtwoorden van Unix-grondleggers</a></li></p>
 		</ul>
 		<br>
 	</div>
