--- a/contact.html
+++ b/contact.html
@@ -43,8 +43,9 @@
 <div id="overig">
 	<h4>📫  Overig</h4>
 	<p>Ik ben ook bereikbaar via de volgende diensten:</p>
-	<p><a href="https://threema.id/YEYVFWSK">Threema</a>: 
+	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>: 
 	<code> YEYVFWSK </code></p>
+	<p><a href="https://wire.com" target = "_blank">Wire</a>: @daanvanmonsjou</p>
 </div>
 	
 <div id="Tweakers_publeaks">
