--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 	<p>Ik ben ook bereikbaar via de volgende diensten:</p>
 	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>: 
 	<code> YEYVFWSK </code></p>
-	<p><a href="https://wire.com" target = "_blank">Wire</a>: @daanvanmonsjou</p>
+	<p><a href="https://wire.com" target = "_blank">Wire</a>: <code> @daanvanmonsjou </code></p>
 </div>
 	
 <div id="Tweakers_publeaks">
