--- a/contact.html
+++ b/contact.html
@@ -46,6 +46,7 @@
 	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>: 
 	<code> YEYVFWSK </code></p>
 	<p><a href="https://wire.com" target = "_blank">Wire</a>: <code> @daanvanmonsjou </code></p>
+	<p>Fingerprint: <code> ce509d4b 9ae1221a 54bd4f85 3e71e28d dc9b4706 568b6bb5 bada6c6d cbc68745 </code></p>
 </div>
 	
 <div id="Tweakers_publeaks">
