--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet coderen, dus bij voorbaar mijn excuses. -->
 <head>	
 	<meta charset="UTF-8">
 	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
@@ -22,6 +23,7 @@
 </head>
 <body>
 	<body>
+<!-- Div 1: het begin -->
 	<div>
 		<h1>Daan van Monsjou</h1>
 		<h2>Freelance (tech)journalist</h2>
@@ -29,6 +31,7 @@
 		<br>
 		<hr>
 	</div>
+<!-- Div 2: de matige sequel -->
 	<div>
 		<br>
 		<h4>👨‍💻  Over mij</h4>
@@ -40,6 +43,7 @@
 		<p>Benieuwd naar mijn werk? Bekijk dan <a href="https://daanvanmonsjou.nl/portfolio">mijn portfolio</a>.</p>
 		<p>Ik schrijf ook artikelen voor mijn opleiding. Deze vind je op <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
 	</div>
+<!-- Div 3: wat doe je hier nog? -->
 	<div>
 		<br>
 		<h4>💬  Contact</h4>
@@ -56,6 +60,7 @@
 					<p><code>+31 (0)6 2604 5919</code>
 				</div>
 			</div>
+<!-- Div 4: A New Code -->
     	  </div>
 		<br>
 		<p>Wil je gevoelige informatie met me delen of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
@@ -64,5 +69,6 @@
 		</p>
 	</div>
 </body>
-
-<br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+<footer>
+	<br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+</footer>
