--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet coderen, dus bij voorbaar mijn excuses. -->
+<!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
 <head>	
 	<meta charset="UTF-8">
 	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
