--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
+			<!-- Div 3.5: eigenlijk een prequel -->
 			<div><a style="font-family: 'Open Sans', sans-serif;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
 				<div id="uniquename" style="display:none;">
 					<p><code>+31 (0)6 2604 5919</code>
