--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
 	<p><a href="https://wire.com" target = "_blank">Wire</a>: 
 	<code style="margin-left: 40px;"> @daanvanmonsjou </code></p>
 	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>: 
-	<code style="margin-left: 40px;"> YEYVFWSK </code></p>
+	<code> YEYVFWSK </code></p>
 </div>
 	
 <div id="Tweakers_publeaks">
