--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
 	<p>Ik ben ook bereikbaar via de volgende diensten:</p>
 	<p><a href="https://wire.com" target = "_blank">Wire</a>:&emsp;&emsp;&emsp;&emsp;
 	<code style ";">@daanvanmonsjou</code></p>
-	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>:&emsp;&ensp;
+	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>:&emsp;&emsp;
 	<code> YEYVFWSK </code></p>
 </div>
 	
