--- a/contact.html
+++ b/contact.html
@@ -43,9 +43,9 @@
 <div id="overig">
 	<h4>📫  Overig</h4>
 	<p>Ik ben ook bereikbaar via de volgende diensten:</p>
-	<p><a href="https://wire.com" target = "_blank">Wire</a>:&emsp;&emsp;&emsp;&emsp;
-	<code style ";">@daanvanmonsjou</code></p>
-	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>:&emsp;&emsp;
+	<p><a href="https://wire.com" target = "_blank">Wire</a>:&emsp;&emsp;&emsp;
+	<code> @daanvanmonsjou </code></p>
+	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>:&emsp;
 	<code> YEYVFWSK </code></p>
 </div>
 	
