--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,8 @@
 	<p>Ik ben ook bereikbaar via de volgende diensten:</p>
 	<p><a href="https://wire.com" target = "_blank">Wire</a>: 
 	<code> @daanvanmonsjou </code></p>
+	<p><a href="https://wickr.com/" target = "_blank">Wickr</a>: 
+	<code> @daanvanmonsjou </code></p>
 	<p><a href="https://threema.id/YEYVFWSK" target = "_blank">Threema</a>: 
 	<code> YEYVFWSK </code></p>
 </div>
