--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
 <div id="PGP">
 	<h4>🔐  PGP</h4>
 	<p>Je kunt eventueel gebruikmaken van PGP om de inhoud van je email te versleutelen. Dit kun je doen met je eigen software, bijvoorbeeld <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> voor Windows of <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> voor macOS. Op deze manier weet je zeker dat je bericht alleen door mij wordt gelezen.</p>
-	<p>Je kunt mijn public key <a href="https://daanvanmonsjou.nl/F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">hier downloaden</a>.
+	<p>Je kunt mijn public key hier <a href="/pgp-public.txt">bekijken</a> of <a href="https://daanvanmonsjou.nl/F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
 	Je kunt me ook vinden op <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
 </div>
