--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,14 @@
 	Gebruik bij voorkeur de <a href="https://www.torproject.org/download/" target = "_blank">Tor-browser</a> voor het aanmaken van een anoniem Protonmail-adres.</p>
 	<p>Stuur je bericht vervolgens via je nieuwe Protonmail-adres naar <a href="mailto:daanvanmonsjou@protonmail.com">daanvanmonsjou@protonmail.com</a>.
 	Je mail komt dan volledig versleuteld bij me aan.</p>
-	<p>Tip: Protonmail heeft ook een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
+	<p>Tip: Protonmail heeft een <a href="https://protonirockerxow.onion/" target = "_blank">aparte website</a> voor gebruik met de Tor-browser. Deze link kun je niet openen met een 'gewone' webbrowser.</p>
 </div>
 	
 <div id="PGP">
 	<h4>🔐  PGP</h4>
 	<p>Je kunt eventueel gebruikmaken van PGP om de inhoud van je email te versleutelen. Dit kun je doen met je eigen software, bijvoorbeeld <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> voor Windows of <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> voor macOS. Op deze manier weet je zeker dat je bericht alleen door mij wordt gelezen.</p>
 	<p>Je kunt mijn public key hier <a href="/pgp-public.txt">bekijken</a> of <a href="https://daanvanmonsjou.nl/F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
-	Je kunt me ook vinden op <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
+	Je kunt me daarnaast vinden op <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
 </div>
 
@@ -36,7 +36,7 @@
 	<h4>📞  Telefoon</h4>
 	<p>Uiteraard ben ik ook telefonisch bereikbaar op het volgende nummer:</p>
 	<p><code>+31 (0)6 2604 5919</code></p>
-	<p>Dit telefoonnummer werkt ook voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (meest veilig) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
+	<p>Dit telefoonnummer werkt voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (meest veilig) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
 	<p>Gebruik met oog op privacy eventueel een prepaid simkaart. Deze kun je al voor een paar euro aanschaffen bij Primera. Betaal bij voorkeur met cash.</p>
 </div>
 
