--- a/contact.html
+++ b/contact.html
@@ -15,6 +15,7 @@
 <div id="text">
 	<p>Wil je liever anoniem contact met me opnemen, bijvoorbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
 	<p>Is anonimiteit niet noodzakelijk? Kijk dan op <a href="https://daanvanmonsjou.nl/">mijn homepage</a> voor overige contactgegevens.</p>
+	
 <div id="email">
 	<h4>📧  Protonmail</h4>
 	<p>De makkelijkste manier om veilig en anoniem contact met me op te nemen, is met <a href="https://protonmail.com/" target = "_blank">Protonmail</a>, een veilige e-maildienst. 
@@ -27,7 +28,7 @@
 <div id="PGP">
 	<h4>🔐  PGP</h4>
 	<p>Je kunt eventueel gebruikmaken van PGP om de inhoud van je email te versleutelen. Dit kun je doen met je eigen software, bijvoorbeeld <a href="https://www.gpg4win.org" target = "_blank">Gpg4win</a> voor Windows of <a href="https://gpgtools.org/" target = "_blank">GPG Suite</a> voor macOS. Op deze manier weet je zeker dat je bericht alleen door mij wordt gelezen.</p>
-	<p>Je kunt mijn public key hier <a href="/pgp-public.txt">bekijken</a> of <a href="https://daanvanmonsjou.nl/F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
+	<p>Je kunt mijn public key hier <a href="/pgp-public.txt" target = "_blank">bekijken</a> of <a href="https://daanvanmonsjou.nl/F82472E95EA365152BF6F05DB20656DE8FEA2263.asc">downloaden</a>.
 	Je kunt me daarnaast vinden op <a href="https://keybase.io/daanvanmonsjou" target = "_blank">Keybase</a>.</p>
 	<p>Fingerprint: <code>F824 72E9 5EA3 6515 2BF6 F05D B206 56DE 8FEA 2263</code></p>
 </div>
@@ -36,7 +37,7 @@
 	<h4>📞  Telefoon</h4>
 	<p>Uiteraard ben ik ook telefonisch bereikbaar op het volgende nummer:</p>
 	<p><code>+31 (0)6 2604 5919</code></p>
-	<p>Dit telefoonnummer werkt voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (meest veilig) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
+	<p>Dit telefoonnummer werkt ook voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (meest veilig) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
 	<p>Gebruik met oog op privacy eventueel een prepaid simkaart. Deze kun je al voor een paar euro aanschaffen bij Primera. Betaal bij voorkeur met cash.</p>
 </div>
 
@@ -56,8 +57,10 @@
 <div id="Tweakers_publeaks">
 	<h4>📰  Tweakers tippen?</h4>
 	<p>Wil je een anonieme tip naar Tweakers sturen? Dat kun je beter via <a href="https://www.publeaks.nl/" target = "_blank">Publeaks</a> doen. Dit is een Nederlands platform waarmee je veilig informatie kunt lekken naar de pers.</p>
-	<p>Op de website van Publeaks vind je instructies. Volg deze nauwlettend. Selecteer vervolgens Tweakers als ontvanger. Je bericht komt zo bij de juiste persoon terecht.</p><br><hr>
+	<p>Op de website van Publeaks vind je instructies. Volg deze nauwlettend. Selecteer vervolgens Tweakers als ontvanger. Je bericht komt zo bij de juiste persoon terecht.</p><br><br><hr>
 </div>
 </body>
 	
-<br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+<footer>
+	<br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+</footer>
