--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
 <body>
 	
 <div id="title">
-	<h3>Anoniem contact opnemen</h3><br><hr><br>
+	<h3>Anoniem contact opnemen</h3><hr><br>
 </div>
 
 <div id="text">
