--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 	<h3>Anoniem contact opnemen</h3><hr><br>
 </div>
 
-<div id="text"><br>
+<div id="text">
 	<p>Wil je liever anoniem contact met me opnemen, bijvoorbeeld om gevoelige informatie te delen? Dat kan! Hieronder vind je enkele (veilige) manieren om me te bereiken.</p>
 	<p>Is anonimiteit niet noodzakelijk? Kijk dan op <a href="https://daanvanmonsjou.nl/">mijn homepage</a> voor overige contactgegevens.</p>
 	
