--- a/contact.html
+++ b/contact.html
@@ -38,7 +38,7 @@
 	<p>Uiteraard ben ik ook telefonisch bereikbaar op het volgende nummer:</p>
 	<p><code>+31 (0)6 2604 5919</code></p>
 	<p>Dit telefoonnummer werkt ook voor <a href="https://www.signal.org/" target = "_blank">Signal</a> (meest veilig) en <a href="https://www.whatsapp.com/" target = "_blank">WhatsApp</a>.</p>
-	<p>Gebruik met oog op privacy eventueel een prepaid simkaart. Deze kun je al voor een paar euro aanschaffen bij Primera. Betaal bij voorkeur met cash.</p>
+	<p>Gebruik met oog op privacy eventueel een prepaid simkaart. Deze kun je al voor een paar euro aanschaffen bij Primera.</p>
 </div>
 
 <div id="overig">
