--- a/index.html
+++ b/index.html
@@ -23,14 +23,12 @@
 </head>
 <body>
 	<body>
-<!-- Div 1: het begin -->
 	<div>
 		<h1>Daan van Monsjou</h1>
 		<h2>Freelance (tech)journalist</h2>
 		<br>
 		<hr>
 	</div>
-<!-- Div 2: de matige sequel -->
 	<div>
 		<br>
 		<h4>👨‍💻  Over mij</h4>
@@ -42,7 +40,6 @@
 		<p>Benieuwd naar mijn werk? Bekijk dan <a href="https://daanvanmonsjou.nl/portfolio">mijn portfolio</a>.</p>
 		<p>Ik schrijf ook artikelen voor mijn opleiding. Deze vind je op <a href="https://medium.com/@DaanvanMonsjou" target = "_blank">Medium</a>.</p>
 	</div>
-<!-- Div 3: wat doe je hier nog? -->
 	<div>
 		<br>
 		<h4>💬  Contact</h4>
@@ -54,13 +51,12 @@
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
-			<!-- Div 3.5: eigenlijk een prequel -->
+			<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
 			<div><a style="font-family: 'Open Sans', sans-serif;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
 				<div id="uniquename" style="display:none;">
 					<p><code>+31 (0)6 2604 5919</code>
 				</div>
 			</div>
-<!-- Div 4: A New Code -->
     	  </div>
 		<br>
 		<p>Wil je gevoelige informatie met me delen of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
