--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 	<body>
 	<div>
 		<h1>Daan van Monsjou</h1>
-		<h2>Freelance (tech)journalist</h2>
+		<h2>freelance (tech)journalist</h2>
 		<br>
 		<hr>
 	</div>
