--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	<title>Daan van Monsjou - Freelance techjournalist</title>
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Mono&display=swap" rel="stylesheet">
+	<link href="https://daanvanmonsjou.nl/files/iAWriterDuospace-Regular.ttf" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	<script type="text/javascript" language="JavaScript">
 		function HideContent(d) {
