--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
 			<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
-			<div><a style="font-family: 'iA Writer Duospace', monospace; font-size: 24px;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
+			<div><a style="font-family: 'Source Sans Pro', sans-serif; font-size: 20px;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
 				<div id="uniquename" style="display:none;">
 					<p><code>+31 (0)6 2604 5919</code>
 				</div>
