--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Daan van Monsjou, techjournalist, freelance">
 	<title>Daan van Monsjou - Freelance techjournalist</title>
 	<link href="stylesheet.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Roboto+Mono|Roboto+Slab|Source+Sans+Pro&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans|Sen|Source+Sans+Pro|Ubuntu+Mono&display=swap" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	<script type="text/javascript" language="JavaScript">
 		function HideContent(d) {
@@ -52,7 +52,7 @@
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
 			<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
-			<div><a style="font-family: 'Source Sans Pro', sans-serif; font-size: 20px;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
+			<div><a style="font-family: 'Sen', sans-serif; font-size: 20px;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>
 				<div id="uniquename" style="display:none;">
 					<p><code>+31 (0)6 2604 5919</code>
 				</div>
