--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,7 @@
 				<p><li><a href="https://tweakers.net/reviews/7578/hoe-staat-het-met-realtime-raytracing.html" target = "_blank">Achtergrond: Hoe staat het met realtime raytracing?</a></li></p>
 				<p><li><a href="https://tweakers.net/geek/162530/tweakers-podcast-96-e3-koehandel-raytracing-en-waf-beperkingen.html" target = "_blank">Podcast: Tweakers Podcast #96: E3-koehandel, raytracing en waf-beperkingen</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/162226/een-terugblik-op-windows-7-vista-maar-dan-beter.html" target = "_blank">Nieuws: Een terugblik op Windows 7 - 'Vista, maar dan beter'</a></li></p>
+				<p><li><a href="https://tweakers.net/nieuws/164758/khronos-brengt-hardware-agnostische-raytracing-extensies-voor-vulkan-uit.html" target = "_blank">Nieuws: Khronos brengt hardware-agnostische raytracing-extensies voor Vulkan uit</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158704/canonical-brengt-ubuntu-1910-uit-met-ingebouwde-nvidia-drivers.html" target = "_blank">Nieuws: Canonical brengt Ubuntu 19.10 uit met ingebouwde Nvidia-drivers</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/158576/ontwikkelaar-vindt-kwetsbaarheid-in-sudo-commando-voor-linux.html" target = "_blank">Nieuws: Ontwikkelaar vindt kwetsbaarheid in sudo-commando voor Linux</a></li></p>
 				<p><li><a href="https://tweakers.net/nieuws/161164/bijna-9-op-de-10-geregistreerde-beveiligingscameras-filmen-openbare-weg.html" target = "_blank">Nieuws: Bijna 9 op de 10 geregistreerde beveiligingscamera's filmen openbare weg</a></li></p>
