--- a/index.html
+++ b/index.html
@@ -66,5 +66,5 @@
 	</div>
 </body>
 <footer>
-	<br><div style= "float: right"; font-size: 16px;"> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+	<br><div style= "float: right; font-size: 16px";> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style="font-size: 16px";>Github Pages</a></div>
 </footer>
