--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta name="keywords" content="Daan van Monsjou, techjournalist, freelance">
 	<title>Daan van Monsjou - Freelance techjournalist</title>
 	<link href="stylesheet.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	<script type="text/javascript" language="JavaScript">
 		function HideContent(d) {
