--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 	<meta charset="UTF-8">
 	<meta description="Portfolio - Daan van Monsjou">
 	<link href="stylesheet.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat|Roboto+Mono&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
 	<title>Portfolio - Daan van Monsjou</title>
