--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -21,10 +21,7 @@
 	</div>
 
 	<div>
-		<h4>Tussenkopjes</h4>
-      <p>Voor het maken van tussenkopjes typ je twee hashtags voor je koptekst. Dus:
-      <p><code>## Tussenkopjes</code> wordt:
-      <h4>Tussenkopje</h4>
+      <p>Voor het maken van tussenkopjes typ je twee hashtags voor je koptekst. Dus: <code>## Tussenkopjes</code> wordt:<h3>Tussenkopje</h3></p>
 	</div>
 
 	<div>
