--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -21,22 +21,16 @@
 	</div>
 
 	<div>
-      <p>Voor het maken van tussenkopjes typ je twee hashtags voor je koptekst. Dus: <code>## Tussenkopjes</code> wordt:<h5>Tussenkopje</h5></p>
+      <p>Voor het maken van tussenkopjes typ je twee hashtags voor je koptekst. Dus: <code>## Tussenkopje</code></p>
 	</div>
 
 	<div>
-		<h4>💾  OC3D</h4>
-			<ul style="list-style-type:disc;">
-				<p><li><a href="https://www.overclock3d.net/news/cpu_mainboard/ryzen_-_am4_feature_roundup/1" target = "_blank">AMD Ryzen - Socket AM4 Feature Roundup</a></li></p>
-				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/meet_manus_-_the_world_s_first_consumer_virtual_reality_glove/1" target = "_blank">Meet Manus - the world's first consumer virtual reality glove</a></li></p>
-				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/nvidia_officially_teases_gtx_1080_cooler/1" target = "_blank">Nvidia officially teases GTX 1080 cooler</a></li></p>
-				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/amd_launches_crossfire_api_on_gpuopen/1" target = "_blank">AMD launches CrossFire API on GPUOpen</a></li></p>
-				<p><li><a href="https://www.overclock3d.net/news/software/gog_galaxy_is_now_in_open_beta/1" target = "_blank">GOG Galaxy is now in Open Beta</a></li></p>
-				<p><li><a href="https://www.overclock3d.net/news/gpu_displays/amd_is_teasing_an_upcoming_radeon_gpu_on_times_square/1" target = "_blank">AMD is teasing an upcoming Radeon GPU on Times Square</a></li></p>
-			</ul>
-		<br><br>
-		<hr>
-	</div>
-</body>
+		<h4>Witregels</h4> 
+			<p>Witregels zijn gelukkig redelijk simpel. In plaats van één witregel, laat je twee regels leeg. Je kunt ook <code><br></code> typen.</p>
+		</body>
 
+	<div>
+		<h4>YouTube-video's</h4>
+		<p></p>
+		<br>
 <br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
