--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <head>
 	<meta charset="UTF-8">
-	<meta description="Portfolio - Daan van Monsjou">
+	<meta description="Markdown 101">
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
 	<link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
-	<title>Portfolio - Daan van Monsjou</title>
+	<title>Markdown 101</title>
 </head>
 
 <body>
@@ -21,16 +21,22 @@
 	</div>
 
 	<div>
-      <p>Voor het maken van tussenkopjes typ je twee hashtags voor je koptekst. Dus: <code>## Tussenkopje</code></p>
+		<h4>Tussenkopjes</h4>
+     		<p>Voor het maken van tussenkopjes typ je twee hashtags voor je koptekst. Dus: <code>## Tussenkopje</code></p>
 	</div>
 
 	<div>
 		<h4>Witregels</h4> 
-			<p>Witregels zijn gelukkig redelijk simpel. In plaats van één witregel, laat je twee regels leeg. Je kunt ook <code><br></code> typen.</p>
+			<p>Witregels zijn gelukkig redelijk simpel. In plaats van één witregel, laat je twee regels leeg.</p>
 		</body>
 
 	<div>
-		<h4>YouTube-video's</h4>
-		<p></p>
+		<h4>Linkjes</h4>
+			<p>Linkjes kun je als volgt in je tekst zetten: <code> [Je tekst gaat hier](https://je-link-gaat-hier.nl) </code>. <br> Dat ziet er als volgt uit: <a href="je-link-gaat-hier.nl">Je tekst gaat hier</a>.</p>
 		<br>
+	<div>
+		<h4>Plaatjes</h4>
+			<p> Het uploaden van plaatjes gaat bijna hetzelfde: <code>![De beschrijving van je plaatje hier](https://link-naar-plaatje.nl/plaatje.jpeg)</code>. <br>Let wel op het uitroepteken vooraan.</p>
+		
+		</div>
 <br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
