--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -31,7 +31,8 @@
 
 	<div>
 		<h4>Linkjes</h4>
-			<p>Linkjes kun je als volgt in je tekst zetten: <code> [Je tekst gaat hier](https://je-link-gaat-hier.nl) </code>. <br> Dat ziet er als volgt uit: <a href="je-link-gaat-hier.nl">Je tekst gaat hier</a>.</p>
+			<p>Linkjes kun je als volgt in je tekst zetten: <code> [Je tekst gaat hier](https://je-link-gaat-hier.nl)</code>.</p>
+		<p>Dat ziet er als volgt uit: <a href="je-link-gaat-hier.nl">Je tekst gaat hier</a>.</p>
 		<br>
 	<div>
 		<h4>Plaatjes</h4>
