--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -33,10 +33,15 @@
 		<h4>Linkjes</h4>
 			<p>Linkjes kun je als volgt in je tekst zetten: <code> [Je tekst gaat hier](https://je-link-gaat-hier.nl)</code>.</p>
 		<p>Dat ziet er als volgt uit: <a href="je-link-gaat-hier.nl">Je tekst gaat hier</a>.</p>
-		<br>
 	<div>
 		<h4>Plaatjes</h4>
-			<p> Het uploaden van plaatjes gaat bijna hetzelfde: <code>![De beschrijving van je plaatje hier](https://link-naar-plaatje.nl/plaatje.jpeg)</code>. <br>Let wel op het uitroepteken vooraan.</p>
-		
+			<p>Het uploaden van plaatjes gaat bijna hetzelfde: <code>![De beschrijving van je plaatje hier](https://link-naar-plaatje.nl/plaatje.jpeg)</code>.</p><p>Let wel op het uitroepteken vooraan.</p>
 		</div>
+	<div>
+		<h4>Video's</h4>
+		<p>Je kunt video's direct insluiten via YouTube. Dat doe je als volgt:</p>
+		<p>Ga naar je YouTube-video naar keuze. Klik vervolgens op de 'Delen'-knop onder de video. Klik op 'insluiten', en kopieer de 'iframe'-tekst die er staat.</p>
+		<p>Plak vervolgens die tekst in je tekst. Done!</p>
+		<p><a href"https://imgur.com/a/C20L9kb" target = "_blank">Hier</a> vind je instructies met plaatjes.</p>
+	</div>
 <br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
