--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -40,8 +40,12 @@
 	<div>
 		<h4>Video's</h4>
 		<p>Je kunt video's direct insluiten via YouTube. Dat doe je als volgt:</p>
-		<p>Ga naar je YouTube-video naar keuze. Klik vervolgens op de 'Delen'-knop onder de video. Klik op 'insluiten', en kopieer de 'iframe'-tekst die er staat.</p>
-		<p>Plak vervolgens die tekst in je tekst. Done!</p>
+		<ul>
+			<li>Ga naar je YouTube-video naar keuze.</li>
+			<li>Klik vervolgens op de 'Delen'-knop onder de video.</li>
+			<li>Klik op 'insluiten', en kopieer de 'iframe'-tekst die er staat.</li>
+			<li>Plak vervolgens die tekst in je tekst. Done!</li>
+		</ul>
 		<p><a href"https://imgur.com/a/C20L9kb" target = "_blank">Hier</a> vind je instructies met plaatjes.</p>
 	</div>
 <br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
