--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -21,7 +21,7 @@
 
 	<div>
 		<h4>Tussenkopjes</h4>
-     		<p>Voor het maken van tussenkopjes typ je twee hashtags voor je koptekst. Dus: <code>## Tussenkopje</code></p>
+     		<p>Voor het maken van tussenkopjes typ je twee hashtags en een spatie voor je koptekst. Dus: <code>## Tussenkopje</code></p>
 	</div>
 
 	<div>
