--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -15,8 +15,7 @@
 	</div>
 
 	<div>
-		<p>Markdown is hartstikke leuk enzo, maar vereist wel wat kennis. Gelukkig heb je vanaf nu dit spiekbriefje om je op de huppel te helpen.</p>
-		<br>
+		<p>Markdown is hartstikke leuk enzo, maar het is wel iets anders dan gewone tekst. Hier dus een spiekbriefje met alle gare 'regels'.</p>
 	</div>
 
 	<div>
