--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -45,6 +45,6 @@
 			<li>Klik op 'insluiten', en kopieer de 'iframe'-tekst die er staat.</li>
 			<li>Plak vervolgens die tekst in je tekst. Done!</li>
 		</ul>
-		<p> <a href"https://www.imgur.com/a/C20L9kb">Hier vind je instructies met plaatjes.</a> </p>
+		<p><a href="https://imgur.com/a/C20L9kb" target="_blank">Kijk hier</a> voor instructies met plaatjes</p>
 	</div>
 <br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
