--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -47,4 +47,9 @@
 		</ul>
 		<p><a href="https://imgur.com/a/C20L9kb" target="_blank">Kijk hier</a> voor instructies met plaatjes</p>
 	</div>
+	<div>
+		<h4>Bijschriften</h4>
+		<p>Als je een bijschrift wilt gebruiken - bijvoorbeeld onder een plaatje - dan typ je de tekst als volgt:</p>
+		<p><code><p class="bijschrift">Je bijschrift gaat hier</code></p>
+		<p>Het bleek helaas onmogelijk om dit automatisch te doen, dus ik heb dit op deze manier ingesteld.
 <br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
