--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -51,5 +51,10 @@
 		<h4>Bijschriften</h4>
 		<p>Als je een bijschrift wilt gebruiken - bijvoorbeeld onder een plaatje - dan typ je de tekst als volgt:</p>
 		<p><code><p class="bijschrift">Je bijschrift gaat hier</code></p>
-		<p>Het bleek helaas onmogelijk om dit automatisch te doen, dus ik heb dit op deze manier ingesteld.
+		<p>Het bleek helaas onmogelijk om dit automatisch te doen, dus helaas moet het wel op deze manier.</p>
+		<br><br>
+		<hr>
+	</div>
+</body>
+
 <br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
