--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -50,7 +50,7 @@
 	<div>
 		<h4>Bijschriften</h4>
 		<p>Als je een bijschrift wilt gebruiken - bijvoorbeeld onder een plaatje - dan typ je de tekst als volgt:</p>
-		<p><code><p class="bijschrift">Je bijschrift gaat hier</code></p>
+		<p><code>&lt;p class="bijschrift"&gt;Je bijschrift gaat hier&lt;/p&gt;
 		<p>Het bleek helaas onmogelijk om dit automatisch te doen, dus helaas moet het wel op deze manier.</p>
 		<br><br>
 		<hr>
