--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -16,6 +16,7 @@
 
 	<div>
 		<p>Markdown is hartstikke leuk enzo, maar het is wel iets anders dan gewone tekst. Hier dus een spiekbriefje met alle gare 'regels'.</p>
+		<p>Je kunt de meeste dingen prima kopieëren, plakken (zoals de bijschrift-regel) en invullen.</p>
 	</div>
 
 	<div>
