--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -44,7 +44,7 @@
 			<li>Ga naar je YouTube-video naar keuze.</li>
 			<li>Klik vervolgens op de 'Delen'-knop onder de video.</li>
 			<li>Klik op 'insluiten', en kopieer de 'iframe'-tekst die er staat.</li>
-			<li>Plak vervolgens die tekst in je tekst. Done!</li>
+			<li>Plak die dingen vervolgens in je tekst. Done!</li>
 		</ul>
 		<p><a href="https://imgur.com/a/C20L9kb" target="_blank">Kijk hier</a> voor instructies met plaatjes</p>
 	</div>
