--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -51,8 +51,7 @@
 	<div>
 		<h4>Bijschriften</h4>
 		<p>Als je een bijschrift wilt gebruiken - bijvoorbeeld onder een plaatje - dan typ je de tekst als volgt:</p>
-		<p><code>&lt;p class="bijschrift"&gt;Je bijschrift gaat hier&lt;/p&gt;</code></p>
-		<p>Het bleek helaas onmogelijk om dit automatisch te doen, dus helaas moet het wel op deze manier.</p>
+		<p><code>&lt;p class="bijschrift"&gt;De tekst voor je bijschrift gaat hier&lt;/p&gt;</code></p>
 		<br><br>
 		<hr>
 	</div>
