--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -56,5 +56,6 @@
 		<hr>
 	</div>
 </body>
-
-<br><div style= "float: right"; font-size: 16px;> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style= "font-size: 16px";>Github Pages</a></div>
+<footer>
+	<br><div style= "float: right; font-size: 16px";> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style="font-size: 16px";>Github Pages</a></div>
+</footer>
