--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -35,7 +35,8 @@
 		<p>Dat ziet er als volgt uit: <a href="je-link-gaat-hier.nl">Je tekst gaat hier</a>.</p>
 	<div>
 		<h4>Plaatjes</h4>
-			<p>Het uploaden van plaatjes gaat bijna hetzelfde: <code>![De beschrijving van je plaatje hier](https://link-naar-plaatje.nl/plaatje.jpeg)</code>.</p><p>Let wel op het uitroepteken vooraan.</p>
+			<p>Het uploaden van plaatjes gaat bijna hetzelfde: <code>![De beschrijving van je plaatje hier](https://link-naar-plaatje.nl/plaatje.jpeg)</code>.</p>
+			<p>Let wel op het uitroepteken vooraan. De beschrijving krijg je te zien als je op het plaatje klikt of je muis erboven houdt.</p>
 		</div>
 	<div>
 		<h4>Video's</h4>
