--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -16,7 +16,7 @@
 
 	<div>
 		<p>Markdown is hartstikke leuk enzo, maar het is wel iets anders dan gewone tekst. Hier dus een spiekbriefje met alle gare 'regels'.</p>
-		<p>Je kunt de meeste dingen prima kopieëren, plakken (zoals de bijschrift-regel) en invullen.</p>
+		<p>Je kunt de meeste dingen prima kopiëren, plakken en invullen. Je hoeft dit dus niet allemaal uit je hoofd te kennen.</p>
 	</div>
 
 	<div>
@@ -53,6 +53,7 @@
 		<h4>Bijschriften</h4>
 		<p>Als je een bijschrift wilt gebruiken - bijvoorbeeld onder een plaatje - dan typ je de tekst als volgt:</p>
 		<p><code>&lt;p class="bijschrift"&gt;De tekst voor je bijschrift gaat hier&lt;/p&gt;</code></p>
+		<p>Je hoeft dit niet uit je hoofd te kennen Kopiëren en plakken werkt prima!</p>
 		<br><br>
 		<hr>
 	</div>
