--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -53,7 +53,7 @@
 		<h4>Bijschriften</h4>
 		<p>Als je een bijschrift wilt gebruiken - bijvoorbeeld onder een plaatje - dan typ je de tekst als volgt:</p>
 		<p><code>&lt;p class="bijschrift"&gt;De tekst voor je bijschrift gaat hier&lt;/p&gt;</code></p>
-		<p>Je hoeft dit niet uit je hoofd te kennen Kopiëren en plakken werkt prima!</p>
+		<p>Je hoeft dit niet uit je hoofd te kennen. Kopiëren en plakken werkt prima!</p>
 		<br><br>
 		<hr>
 	</div>
