--- a/cheatsheet.html
+++ b/cheatsheet.html
@@ -31,11 +31,11 @@
 
 	<div>
 		<h4>Linkjes</h4>
-			<p>Linkjes kun je als volgt in je tekst zetten: <code> [Je tekst gaat hier](https://je-link-gaat-hier.nl)</code>.</p>
+			<p>Linkjes kun je als volgt in je tekst zetten: <code> [Je tekst gaat hier](https://je-link-gaat-hier.nl)</code></p>
 		<p>Dat ziet er als volgt uit: <a href="je-link-gaat-hier.nl">Je tekst gaat hier</a>.</p>
 	<div>
 		<h4>Plaatjes</h4>
-			<p>Het uploaden van plaatjes gaat bijna hetzelfde: <code>![De beschrijving van je plaatje hier](https://link-naar-plaatje.nl/plaatje.jpeg)</code>.</p>
+			<p>Het uploaden van plaatjes gaat bijna hetzelfde: <code>![De beschrijving van je plaatje hier](https://link-naar-plaatje.nl/plaatje.jpeg)</code></p>
 			<p>Let wel op het uitroepteken vooraan. De beschrijving krijg je te zien als je op het plaatje klikt of je muis erboven houdt.</p>
 		</div>
 	<div>
