--- a/index.html
+++ b/index.html
@@ -1,26 +1,7 @@
 <!DOCTYPE html>
 <!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
-<head>	
-	<meta charset="UTF-8">
-	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
-	<meta name="author" content="Daan van Monsjou">	
-	<meta name="keywords" content="Daan van Monsjou, techjournalist, freelance">
-	<title>Daan van Monsjou - Freelance techjournalist</title>
-	<link href="stylesheet.css" rel="stylesheet">
-	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
-	<link rel="icon" href="images/icon.png">
-	<script type="text/javascript" language="JavaScript">
-		function HideContent(d) {
-		document.getElementById(d).style.display = "none";
-		}
-		function ShowContent(d) {
-		document.getElementById(d).style.display = "block";
-		}
-		function ReverseDisplay(d) {
-		if(document.getElementById(d).style.display == "none") { document.getElementById(d).style.display = "block"; }
-		else { document.getElementById(d).style.display = "none"; }
-	}</script>
-</head>
+
+<link rel="import" href="head.html">
 <body>
 	<body>
 	<div>
