--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
 
-<link rel="import" href="head.html">
+<link rel="import" href="https://daanvanmonsjou.nl/head.html">
 <body>
 	<body>
 	<div>
