--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
-<head>
-	<link rel="import" href="https://daanvanmonsjou.nl/head.html">
-</head>
+
+{% include head.html %}
 
 <body>
 	<body>
