--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
 
-<link rel="head" type="text/html" href="https://daanvanmonsjou.nl/head.html">
+ <div w3-include-html="head.html"></div> 
+
 <body>
 	<body>
 	<div>
