--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
 
- <div w3-include-html="head.html"></div> 
+<object type="text/html" data="head.html"></object>
 
 <body>
 	<body>
