--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
 
-<object type="text/html" data="head.html"></object>
+<object type="text/html" data="https://daanvanmonsjou.nl/head.html"></object>
 
 <body>
 	<body>
