--- a/index.html
+++ b/index.html
@@ -16,17 +16,7 @@
 	<link rel="icon" href="images/icon.png">
 	
 	<!-- script, mede mogelijk gemaakt door StackOverflow -->
-	<script type="text/javascript" language="JavaScript">
-		function HideContent(d) {
-		document.getElementById(d).style.display = "none";
-		}
-		function ShowContent(d) {
-		document.getElementById(d).style.display = "block";
-		}
-		function ReverseDisplay(d) {
-		if(document.getElementById(d).style.display == "none") { document.getElementById(d).style.display = "block"; }
-		else { document.getElementById(d).style.display = "none"; }
-	}</script>
+	<script src="https://daanvanmonsjou.nl/script.js"></script>
 </head>
 
 <body>
