--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head> 
-<!-- meta -->
+	<!-- meta & title -->
 	<meta charset="UTF-8">
 	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
 	<meta name="author" content="Daan van Monsjou">	
