--- a/portfolio.html
+++ b/portfolio.html
@@ -1,19 +1,25 @@
 <!DOCTYPE html>
-<head>
+
+<head> 
+	<!-- meta & title -->
 	<meta charset="UTF-8">
-	<meta description="Portfolio - Daan van Monsjou">
+	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
+	<meta name="author" content="Daan van Monsjou">	
+	<meta name="keywords" content="Daan van Monsjou, techjournalist, freelance">
+	<meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self' cdn.report-uri.com platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com youtube.com https://static.doubleclick.net/instream/ad_status.js; frame-src datawrapper.dwcdn.net https://www.youtube.com/ twitter.com https://s.ytimg.com https://platform.twitter.com syndication.twitter.com cdn.syndication.twimg.com; child-src 'self' https://www.youtube.com/ https://s.ytimg.com; style-src 'self' https://platform.twitter.com/css/ fonts.googleapis.com https://m5test.vanmonsjou.xyz/ 'self'; font-src fonts.gstatic.com; object-src * 'self'; img-src https: data:; script-src-elem 'self' https://cdn.report-uri.com/libs/report-uri-js/1.0.1/report-uri-js.min.js https://cdn.syndication.twimg.com/tweets.json https://platform.twitter.com/; style-src-attr 'self'; media-src 'self' https://www.youtube.com; upgrade-insecure-requests">
+	<title>Portfolio - Daan van Monsjou</title>
+	
+	<!-- style -->
 	<link href="stylesheet.css" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Montserrat|Open+Sans|Source+Sans+Pro&display=swap" rel="stylesheet">
-	<link href="https://emoji-css.afeld.me/emoji.css" rel="stylesheet">
 	<link rel="icon" href="images/icon.png">
-	<title>Portfolio - Daan van Monsjou</title>
 </head>
 
 <body>
 	<div>
 		<h3>Portfolio</h3><hr><br>
 	</div>
-
+	
 	<div>
 		<p>Hieronder vind je enkele artikelen die ik voor mijn opdrachtgevers heb geschreven.</p>
 		<p>Genoeg gezien? <a href="https://daanvanmonsjou.nl">Klik hier</a> om terug te gaan naar mijn homepage.</p>
