--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!-- Leuk dat je kijkt naar m'n broncode. Ik kan eigenlijk helemaal niet programmeren, dus bij voorbaar mijn excuses. -->
 
 <head>
-	<!-- meta -->
+	<!-- meta & title -->
 	<meta charset="UTF-8">
 	<meta name="description" content="Daan van Monsjou - freelance techjournalist">
 	<meta name="author" content="Daan van Monsjou">	
@@ -20,13 +20,12 @@
 </head>
 
 <body>
-	<body>
-	<div>
+	<header>
 		<h1>Daan van Monsjou</h1>
 		<h2>freelance (tech)journalist</h2>
 		<br>
 		<hr>
-	</div>
+	</header>
 	<div>
 		<br>
 		<h4>👨‍💻 Over mij</h4>
