--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@
 	<div>
 		<br>
 		<h4>👨‍💻 Over mij</h4>
-		<p>Hi! Ik ben Daan, freelance journalist en derdejaars student Journalistiek.
-		Momenteel ben ik freelancer voor de nieuwsredactie van <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, waar ik eerder stage liep. 
-		Daarvoor schreef ik nieuwsberichten voor <a href="https://overclock3d.net" target = "_blank">OC3D</a> en <a href="https://www.invader.be/" target = "_blank">Invader</a>.</p>
+		<p>Hi! Ik ben Daan, freelance journalist en derdejaars student Journalistiek.</p>
+		<p>Momenteel ben ik freelancer voor de nieuwsredactie van <a href="https://tweakers.net/crew/864/" target = "_blank">Tweakers</a>, waar ik eerder stage liep. </p>
+		<p>Daarvoor schreef ik nieuwsberichten voor <a href="https://overclock3d.net" target = "_blank">OC3D</a> en <a href="https://www.invader.be/" target = "_blank">Invader</a>.</p>
 		<p>Ik schrijf voornamelijk (nieuws)artikelen over technologie, waaronder computerhardware en -software, videogames, en wetenschap.</p>
 		<br>
 		<h4>📝 Mijn werk</h4>
