--- a/index.html
+++ b/index.html
@@ -43,14 +43,14 @@
 		<h4>💬 Contact</h4>
 		<p>Je kunt me op de volgende manieren bereiken:
 		<br><br>
-		<a href="mailto:daan@vanmonsjou.xyz">E-mail</a> | 
+		<a href="mailto:daan@vanmonsjou.xyz"; alt="daan@vanmonsjou.xyz">E-mail</a> | 
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
 		<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
-			<div><a style="font-family: 'Open Sans', sans-serif; font-size: 20px;" href="https://daanvanmonsjou.nl/objects/reverse.js"; type="text/javascript">Telefoon (ook voor Signal en WhatsApp)</a>
+			<div><a style="font-family: 'Open Sans', sans-serif; font-size: 20px"; type="text/javascript"; href="https://daanvanmonsjou.nl/objects/reverse.js";>Telefoon (ook voor Signal en WhatsApp)</a>
 				<div id="uniquename" style="display:none;">
 					<p><code>+31 (0)6 2604 5919</code>
 				</div>
@@ -63,5 +63,5 @@
 	</div>
 </body>
 <footer>
-	<br><div style= "float: right; font-size: 16px";> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style="font-size: 16px"; alt="daan@vanmonsjou.xyz";>Github Pages</a></div>
+	<br><div style= "float: right; font-size: 16px";> Hosting via <a href="https://pages.github.com/"; target = "_blank"; style="font-size: 16px";>Github Pages</a></div>
 </footer>
