--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="icon" href="images/icon.png">
 	
 	<!-- script, mede mogelijk gemaakt door StackOverflow -->
-	<script src="https://daanvanmonsjou.nl/script.js"></script>
+	<script type="text/javascript"; src="https://daanvanmonsjou.nl/script.js"></script>
 </head>
 
 <body>
@@ -50,10 +50,9 @@
 		<div id="q1" style="display:none;">Hidden</div>
 		<div id="q1" style="display:none;">Hidden</div>
 		<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
-			<div><a style="font-family: 'Open Sans', sans-serif; font-size: 20px";><script src="https://daanvanmonsjou.nl/objects/reverse.js">Telefoon (ook voor Signal en WhatsApp)</script></a>
-				<div id="uniquename" style="display:none;">
-					<p><code>+31 (0)6 2604 5919</code>
-				</div>
+			<div><a style="font-family: 'Open Sans', sans-serif; font-size: 20px;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>				<div id="uniquename" style="display:none;">
+				<p><code>+31 (0)6 2604 5919</code>
+			</div>
 	</div>
 		<br>
 		<p>Wil je gevoelige informatie met me delen of blijf je gewoon liever anoniem? <a href="/contact">Klik dan hier</a>.</p>
