--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 		<a href="https://www.twitter.com/daanvanmonsjou" target = "_blank">Twitter</a> | 
 		<a href="https://www.linkedin.com/in/daanvanmonsjou" target = "_blank">LinkedIn</a> |
 		<a href="https://t.me/daanvanmonsjou" target = "_blank">Telegram</a></p></div>
-		<div id="q1" style="display:none;">Hidden</div>
-		<div id="q1" style="display:none;">Hidden</div>
+		<div class="q1">Hidden</div>
+		<div class="q1">Hidden</div>
 		<!-- Deze Div is mede mogelijk gemaakt door StackOverflow -->
-			<div><a style="font-family: 'Open Sans', sans-serif; font-size: 20px;" href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>				<div id="uniquename" style="display:none;">
+			<div><a href="javascript:ReverseDisplay('uniquename')">Telefoon (ook voor Signal en WhatsApp)</a>				<div id="uniquename" style="display:none;">
 				<p><code>+31 (0)6 2604 5919</code>
 			</div>
 	</div>
